--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nlw-02-discovery",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js"
@@ -11,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "sqlite-async": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
