Adicionando e configurando ts-node-dev

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "rentalx",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "repository": "git@github.com:Hugovarellaa/rentalx.git",
   "author": "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 <hugovarellaa@gmail.com>",
   "license": "MIT",
+  "scripts":{
+    "dev" : "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ."
+  },
   "dependencies": {
     "express": "^4.18.1"
   },
@@ -21,6 +24,7 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   }
 }
