--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "repository": "git@github.com:Hugovarellaa/rentalx.git",
   "author": "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 <hugovarellaa@gmail.com>",
   "license": "MIT",
-  "scripts":{
-    "dev" : "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ."
+  "scripts": {
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ."
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.40",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.17.0",
