--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "rentalx",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "repository": "git@github.com:Hugovarellaa/rentalx.git",
   "author": "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 <hugovarellaa@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev . --transpile-only --ignore-watch node_modules --respawn"
+  },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
@@ -20,6 +23,7 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
