--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rentalx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn ."
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/Hugovarellaa/rentalx#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -31,6 +34,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
