--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "lint": "eslint src --ext .ts",
+    "fix": "eslint src --ext .ts --fix"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
