--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.7",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -24,6 +25,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^2.7.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
