--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "fix": "eslint src --ext .ts --fix"
   },
   "dependencies": {
+    "csv-parse": "^5.3.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
