--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "csv-parse": "^5.3.1",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
+    "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
